--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true,
-    "step_definitions": "cypress/e2e/newtours"
+    "step_definitions": "cypress/e2e/**"
   }
 }
